--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <label for="objective">Objective</label>
           <textarea
             type="text"
-            class="form-control"
+            class="form-control weField "
             id="objective"
             placeholder="Enter here "
           ></textarea>
