creating template for resume

--- a/index.html
+++ b/index.html
@@ -147,25 +147,65 @@
       <div class="row">
         <div class="col-md-4 ">
           <!-- left side -->
-         <img src="" class="img-fluid" alt="loading...">
-         <!-- details -->
-          <h2 class="r">Name</h2>
-          <p class="">Contact</p>
-          <p class="">Address</p>
-          <!-- links -->
-          <hr>
-          <div class="links">
-            <h4 class=" m-3">Important Links</h4>
-            <a href="#"  class=" ">facebook</a>  <br>
-            <a href="#"  class=" ">instagram</a> <br>
-            <a href="#"  class=" ">github</a> <br>
-            <a href="#"  class=" ">linkedIn</a> <br>
-
-        </div>
+         <img src="/images/signn22.jpg" class="img-fluid" alt="loading...">
+        
+        <p>ravi kumar dhawan</p>
+        <p>+91-12423423523,+91-3464356436</p>
+        <p>23-c sector delhi</p>
+        <hr>
+        <p> <a href="https://www.facebook.com"> facebook</a></p>
+        <p> <a href="https://www.google.com"> google</a></p>
+        <p> <a href="https://www.github.com"> github</a></p>
         </div>
         <div class="col-md-8 ">
           <!-- right side -->
-          
+          <h1>ravi kumar dhawan</h1>
+        <!-- objective card -->
+        <div class="card">
+          <div class="card-header">
+            <div class="card-body">
+              <h3>Objective</h3>
+              <p>to become a web developer Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae quo nemo maiores! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, doloremque asperiores. Sint to become a web developer Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quae quo nemo maiores! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Autem, doloremque asperiores. Sint. </p>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header">
+            <div class="card-body">
+              <h3>Academic Qualification</h3>
+              <ul>
+                <li>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, sed.
+                </li>
+                <li>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, sed.
+                </li>
+                <li>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, sed.
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="card">
+          <div class="card-header">
+            <div class="card-body">
+              <h3>Work Experience</h3>
+              <ul>
+                <li>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, sed.
+                </li>
+                <li>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, sed.
+                </li>
+                <li>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad, sed.
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+
         </div>
       </div>
     </div>
