creating template for resume

--- a/index.html
+++ b/index.html
@@ -205,7 +205,11 @@
             </div>
           </div>
         </div>
-
+<div class="container mt-3 text-center">
+  <button class="btn btn-light">
+    print CV
+  </button>
+</div>
         </div>
       </div>
     </div>
